--- a/src/public/modules/core/views/adminLogin.html
+++ b/src/public/modules/core/views/adminLogin.html
@@ -1,5 +1,5 @@
 <!-- Signup -->
-<div class="login-wrapper">
+<div class="login-wrapper" style="min-height:100%; margin:auto;">
     <p class="message">Login to an existing account.</p>
     <form class="login" novalidate name="loginForm" ng-model="loginForm">
         <!-- Line 1 -->
