--- a/src/public/modules/admin/css/admin-main.css
+++ b/src/public/modules/admin/css/admin-main.css
@@ -203,17 +203,15 @@ md-list-item>div {
 .faculty-list {
     height: 90vh;
     min-width: 25vw;
-    overflow-y: auto;
+    overflow-y: hidden;
     border-right: 1px solid #E1E1E1;
     margin: 0.5em;
-    height: 59em;
     box-shadow: 1px 2px 6px gray;
 }
 
 .faculty-listy {
     overflow-y: scroll;
     min-width: inherit;
-    max-height: 68vh;
 }
 
 .faculty-modal {
@@ -230,9 +228,8 @@ md-list-item>div {
 }
 
 .faculty-details {
-    min-width: 73vw;
-    max-height: 89vh;
-    margin-top: 7px;
+    min-width: 74vw;
+    max-height: 100vh;
     padding: 4%;
 }
 
@@ -242,11 +239,15 @@ md-list-item>div {
 
 .faculty-info {
     margin: inherit;
-    margin-bottom: 5%;
 }
 
 .course-list {
     margin-top: 15px;
+}
+
+.semester-edit-modal {
+    display: flex;
+    min-width: 60vw;
 }
 
 
@@ -369,4 +370,191 @@ md-dialog {
     -moz-osx-font-smoothing: grayscale;
     /* Support for IE. */
     font-feature-settings: 'liga';
+}
+
+.chipsdemoContactChips md-content.autocomplete {
+    min-height: 250px;
+}
+
+.chipsdemoContactChips md-content.autocomplete input {
+    min-width: 400px;
+}
+
+.chipsdemoContactChips .md-item-text.compact {
+    padding-top: 8px;
+    padding-bottom: 8px;
+}
+
+.chipsdemoContactChips .contact-item {
+    box-sizing: border-box;
+}
+
+.chipsdemoContactChips .contact-item.selected {
+    opacity: 0.5;
+}
+
+.chipsdemoContactChips .contact-item.selected h3 {
+    opacity: 0.5;
+}
+
+.chipsdemoContactChips .contact-item .md-list-item-text {
+    padding: 14px 0;
+    max-width: 190px;
+}
+
+.chipsdemoContactChips .contact-item .md-list-item-text h3 {
+    margin: 0 !important;
+    padding: 0;
+    line-height: 1.2em !important;
+}
+
+.chipsdemoContactChips .contact-item .md-list-item-text h3,
+.chipsdemoContactChips .contact-item .md-list-item-text p {
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+@media (min-width: 960px) {
+    .chipsdemoContactChips .contact-item {
+        float: left;
+        width: 33%;
+    }
+}
+
+.chipsdemoContactChips md-contact-chips {
+    margin-bottom: 10px;
+}
+
+.chipsdemoContactChips .md-chips {
+    padding: 5px 0 8px;
+}
+
+.chipsdemoContactChips .fixedRows {
+    height: 250px;
+    overflow: hidden;
+}
+
+
+/*   */
+
+a {
+    text-decoration: none;
+}
+
+i {
+    vertical-align: middle;
+    font-size: 24px;
+}
+
+.main-fab {
+    position: absolute;
+    z-index: 20;
+    font-size: 30px;
+    top: 100px;
+    left: 24px;
+    transform: scale(.88, .88);
+}
+
+.md-breadcrumb {
+    padding-left: 88px;
+}
+
+.JCLRgrip:first-child {
+    left: 105px!important;
+    display: none!important;
+}
+
+.JColResizer th:first-child {
+    width: 105px!important;
+}
+
+.md-table {
+    min-width: 100%;
+    border-collapse: collapse;
+}
+
+.md-table tbody tr:hover,
+.md-table tbody tr:focus {
+    cursor: pointer;
+    background-color: rgba(63, 81, 181, 0.2);
+}
+
+.md-table-header {
+    border-bottom: 1px solid rgb(230, 230, 230);
+    color: rgb(130, 130, 130);
+    text-align: left;
+    font-size: 0.75em;
+    font-weight: 700;
+    padding: 16px 16px 16px 0;
+}
+
+.md-table-header a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.md-table-content {
+    white-space: nowrap;
+    font-size: 0.8em;
+    padding: 16px 16px 16px 0;
+    height: 72px;
+}
+
+.md-table-td-more {
+    max-width: 72px;
+    width: 72px;
+    padding: 16px;
+}
+
+.md-table-thumbs {
+    max-width: 104px;
+    width: 104px;
+    padding: 16px 32px;
+}
+
+.md-table-thumbs div {
+    overflow: hidden;
+    width: 40px;
+    height: 40px;
+    border-radius: 20px;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    background-size: cover;
+    box-shadow: 0 8px 10px rgba(0, 0, 0, .3);
+    -webkit-box-shadow: 0 8px 10px rgba(0, 0, 0, .1);
+}
+
+.md-table-footer {
+    height: 40px;
+    padding-left: 32px;
+    padding-right: 32px;
+}
+
+.md-table-count-info {
+    line-height: 40px;
+    font-size: .75em;
+}
+
+.md-table-footer-item {
+    width: 40px;
+    height: 40px;
+    vertical-align: middle;
+}
+
+.md-table-active-page {
+    font-weight: 700;
+}
+
+.bold {
+    font-weight: 700;
+}
+
+.grey {
+    color: grey;
+}
+
+md-input-container.md-default-theme .md-input {
+    color: white;
+    border-color: white;
+    margin-top: 24px;
 }
